2011-07-22  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/pthread/unwind-forcedunwind.c (_Unwind_Resume): Add read
	barrier.
	(__gcc_personality_v0): Likewise.
	(_Unwind_ForcedUnwind): Likewise.
	(_Unwind_GetCFA): Likewise.

2011-07-14  Roland McGrath  <roland@hack.frob.com>

	* allocatestack.c (__reclaim_stacks): Use uintptr_t cast rather than
	UINTMAX_C.

2011-06-30  Ulrich Drepper  <drepper@gmail.com>

	* nptl-init.c (__nptl_set_robust): New function.
	(pthread_functions): Add reference.
	* npthreadP.h: Declare __nptl_set_robust.
	* sysdeps/pthread/pthread-functions.h (pthread_functions): Add
	ptr_set_robust member.
	* sysdeps/unix/sysv/linux/fork.c: Call set_robust_list syscall in
	child if threads are used.

2011-06-14  Andreas Jaeger  <aj@suse.de>

	* pthread_rwlock_init.c: Include <string.h> for memset declaration.

2011-05-11  Ulrich Drepper  <drepper@gmail.com>

	[BZ #386]
	* allocatestack.c (allocate_stack): Convert ENOMEM error to EAGAIN.

2011-04-10  Ulrich Drepper  <drepper@gmail.com>

	[BZ #12650]
	* allocatestack.c (get_cached_stack): Deallocate DTV entries before
	clearing memory.
	Patch partly by Robert Rex <robert.rex@exasol.com>.

2011-01-19  Roland McGrath  <roland@redhat.com>

	* pthread_cond_wait.c (__pthread_cond_wait): Fix comment typo.
	* pthread_cond_timedwait.c (__pthread_cond_timedwait): Likewise.
	* pthread_rwlock_rdlock.c (__pthread_rwlock_rdlock): Likewise.
	* pthread_rwlock_wrlock.c (__pthread_rwlock_wrlock): Likewise.
	* pthread_rwlock_timedrdlock.c (pthread_rwlock_timedrdlock): Likewise.
	* pthread_rwlock_timedwrlock.c (pthread_rwlock_timedwrlock): Likewise.

2011-01-16  Andreas Schwab  <schwab@linux-m68k.org>

	* Makefile (test-extras): Add tst-cleanup4aux.

2011-01-14  Ulrich Drepper  <drepper@gmail.com>

	[BZ #10563]
	* sysdeps/pthread/setxid.h (__SETXID_1): Add cast to assignment.
	(__SETXID_2): Likewise.
	(__SETXID_3): Likewise.

2011-01-13  Ulrich Drepper  <drepper@gmail.com>

	[BZ #10484]